# StarTraveler

./: BigBear.txt  CMakeLists.txt  Camera.cpp  Camera.h  ErrorStateBase.cpp  ErrorStateBase.h  FragmentStarShader.sl  GLHandler.cpp  GLHandler.h  Makefile  OptionsParser.cpp  OptionsParser.h  Quaternion.cpp  Quaternion.h  README.md  SDLApplication.cpp  SDLApplication.h  ShaderExamples.supp  ShaderLoader.cpp  ShaderLoader.h  StarField.cpp  StarField.h  VertexStarShader.sl  main.cpp
tests/: Camera.cpp  Quaternion.cpp
